--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,23 @@
 <html>
 <head>
   <title>Treebook</title>
+  
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div class="navbar">
+  <div class="navbar-inner">
+  <div class="container">
+  	<a href="#" class="brand">treebook</a>
+  	<ul class="nav">
+  		<li><%= link_to "All Statuses", statuses_path %></li>
+  </div>	
+  </div>
+  </div>
+<div class="container">
 <%= yield %>
-
+</div>
 </body>
 </html>
